# templates

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  eval.yml
agent-linear-triage-typescript/: SPEC.md
autonomous-agent-snowflake-wif/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  fly.toml  package-lock.json  package.json
autonomous-agent-snowflake-wif/scripts/: ci-verify.sh  publish-jwks.sh
autonomous-agent-snowflake-wif/src/: a2aExecutor.ts  agent.ts  (+8 more)
cross-cloud-agent-identity-python/: .env.example  Dockerfile  README.md  SPEC.md  fly.toml  keycard.toml  pyproject.toml  vercel.json
cross-cloud-agent-identity-python/api/: agent.py
cross-cloud-agent-identity-python/scripts/: provision-credentials.sh
cross-cloud-agent-identity-python/src/agent/: agent_loop.py  result.py  scope.py  server.py
cross-cloud-agent-identity-python/src/agent/snowflake/: connection.py  identity.py  introspect.py
cross-cloud-agent-identity-python/src/agent/tokens/: bootstrap.py  exchange.py  platform.py
cross-cloud-agent-identity-python/src/agent/tools/: agent_identity.py  delegate.py  impersonate.py
databricks-agent/: .env.example  README.md  SPEC.md  keycard.toml  main.py  pyproject.toml
databricks-agent/scripts/: ci-verify.sh
databricks-agent/tools/: authorize.py  genie.py  list_clusters.py  scope.py  sql_warehouse.py
eval/: .env.eval.example  .gitignore  README.md  agent.ts  browser.ts  index.ts  keycard.toml  package-lock.json  package.json  provision.ts  verify.ts  zone.ts
mcp-brokered-credentials-python/: .env.example  README.md  SPEC.md  keycard.toml  main.py  pyproject.toml  upstream.py
mcp-brokered-credentials-python/scripts/: ci-verify.sh  provision-credentials.sh
mcp-brokered-credentials-python/tools/: execute.py  search.py
mcp-brokered-credentials-typescript/: .env.example  README.md  SPEC.md  keycard.toml  package-lock.json  package.json
mcp-client-python/: README.md  pyproject.toml
mcp-client-python/src/client/: main.py
mcp-delegated-access-go/: .env.example  .gitignore  README.md  SPEC.md  go.mod  go.sum  main.go
mcp-server-go/: .env.example  .gitignore  README.md  SPEC.md  go.mod  go.sum  main.go
mcp-server-python-mcp/: .env.example  README.md  SPEC.md  keycard.toml  main.py  pyproject.toml
mcp-server-typescript-express/: README.md  SPEC.md  keycard.toml  package-lock.json  package.json
webhook-impersonation-python/: .env.example  README.md  SPEC.md  config.py  keycard.toml  main.py  pyproject.toml  signing.py  upstream.py
webhook-impersonation-python/scripts/: provision-webhook-secret.sh
webhook-impersonation-python/tools/: send_webhook.py
(+12 files in other folders)
