[project]
name = "databricks-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "keycardai-fastmcp>=0.4.0",
    "keycardai-oauth>=0.14.0",
    "fastmcp>=3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
