[project]
name = "mcp-brokered-credentials-python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "keycardai-mcp>=0.15.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
