[project]
name = "mcp-client-python"
version = "0.1.0"
description = "MCP client with controllable OAuth scopes for testing scope-gated MCP servers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.13.1",
]

[project.scripts]
mcp-client = "client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]
