[project]
name = "webhook-impersonation-python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "keycardai-oauth>=0.12.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
send-webhook = "tools.send_webhook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
